# vini_data_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
deploy/: docker-compose.dev.yml  docker-compose.yml
vini_data_api/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py  vini_logging.py
vini_data_api/db/: base.py  utils.py
vini_data_api/db/dao/: dummy_dao.py
vini_data_api/db/models/: __init__.py  dummy_model.py  users.py
vini_data_api/services/: __init__.py
vini_data_api/tests/: __init__.py  test_dummy.py
vini_data_api/web/: __init__.py  application.py  lifetime.py
vini_data_api/web/api/: __init__.py  router.py
vini_data_api/web/api/dummy/: __init__.py  views.py
vini_data_api/web/api/echo/: __init__.py  schema.py  views.py
vini_data_api/web/api/monitoring/: __init__.py
vini_data_api/web/api/users/: __init__.py  views.py
vini_data_api/web/api/vitivinicultura/: __init__.py  schema.py  views.py
vini_data_api/web/api/vitivinicultura/extractions/: base.py  commercialization.py  exports.py  imports.py  processing.py  production.py
vini_data_api/web/utils/: utils.py  web_data_extractor.py
